--- a/gradle-plugins/biz.aQute.bnd.gradle/testresources/builderplugin5/util/build.gradle
+++ b/gradle-plugins/biz.aQute.bnd.gradle/testresources/builderplugin5/util/build.gradle
@@ -8,11 +8,10 @@ group = "com.example.util"
 version = "1.7.8"
 
 java {
-    modularity.inferModulePath.set(false)
+    modularity.inferModulePath = false
 }
 
-//tasks.withType(Jar).configureEach {
-tasks.jar {
+tasks.withType(Jar).all {
     BundleTaskExtension bundle = extensions.create(BundleTaskExtension.NAME, BundleTaskExtension.class, it)
     bundle.bnd("""-exportcontents: com.example.util.*""")
 
